src/components/ApplicationPage/Chat.css
.chat-wrapper-video, .chat-wrapper-audio {
  border: 1px solid #e2e2e2;
  display: flex;
  flex-direction: column;
}

.chat-wrapper-video {
  height:50% !important;
  /* background: #f1f1f1; */
}

.chat-wrapper-audio {
  height: 100% !important;
  /* background: #f1f1f1; */
}

.chat-display-audio {
  border: 1px solid #e2e2e2;
  min-height: 20vh;
  height: 70vh;
  overflow-y: auto;
}

.chat-display-video {
  border-top: 1px solid #e2e2e2;
  border: 1px solid #e2e2e2;
  min-height: 20vh;
  height: 25vh;
  overflow-y: auto;
}

.chat-messages {
  display: flex;
  overflow-y: auto;
  flex-direction: column;
  overflow-wrap: break-word;
  word-wrap: break-word; /* Firefox support */
}

.message-content {
  display: flex;
  margin-left: 20px;
  margin-right: 20px;
  color: #ffffff;
  padding-bottom: 10px;
}

.user {
  color: #ffffff;
  margin-left: 20px;
}

.message-sender {
  color: rgb(244,153,115);
  font-weight: 700;
  margin-right: 0.4em;
}

.chat-tabs {
  display: flex;
  background-color: rgb(46,94,102);
}

.chat-tabs li {
  margin: 5px;
  padding: 5px;
  border: 1px solid rgb(244,153,115);
  border-radius: 5px;
  color: rgb(244,153,115);
  display: inline-block;
  /* margin-right:10px; */
  background-color: rgb(46,94,102);
  text-align: center;
}

.chat-tabs li:hover {
  cursor:pointer;
 }

 .chat-tabs li:active {
   background-color: rgb(244,153,115);
   color: rgb(46,94,102);
 }

.chat-user-input {
  background-color: rgb(46,94,102);
  padding: 10px;
  width: 90%;
  font-size: 1em;
  margin: 15px auto;
  border-radius: 2px;
  display: block;
  border: 1px solid rgb(244,153,115);
  color: rgb(244,153,115);
}

  input:focus {
  outline: none;
}

::placeholder {
  color: rgb(244,153,115);
}

